--- a/src/main/resources/resource/lang/messages.lang
+++ b/src/main/resources/resource/lang/messages.lang
@@ -1,1 +1,4 @@
 CRAZYSPAWNERAI=CrazySpawnerAI
+CRAZYSPAWNERAI.CONFIG.RELOADED=
+CRAZYSPAWNERAI.CONFIG.SAVED=
+CRAZYSPAWNERAI.MODE.CHANGE={Name} {Value}
